# NEOXLINK-SDK

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTOR_WORKFLOW.md  DATA_COLLABORATION_GUIDELINES.md  GOVERNANCE.md  LICENSE  OPEN_SOURCE_SCOPE.md  PROMPT_COLLABORATION.md  README.md  README.zh-CN.md  README_zh.md  REPOSITORY_ARCHITECTURE.md  mkdocs.yml  openapi.json  pyproject.toml  server.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: good-first-issue.md
.github/workflows/: benchmark.yml  ci.yml  docs.yml  publish-pypi.yml  publish.yml
benchmarks/: run_benchmark.py
benchmarks/intent_parsing/: sample_cases.jsonl
community/: 01_templates.md  02_examples.md  03_plugins.md  04_contributors.md  05_ecosystem.md  06_adoption.md  FOUNDER_REVIEW.md  README.md
core/: __init__.py  schema.py
deprecated/: README.md
deprecated/core/: dedup.py  matching.py  schema.py
docs/: GITHUB_WIKI_SEED.md  index.md  quickstart.md  social-preview.md  typed-outputs.md
docs/api/: neoxlink_sdk.md
docs/stylesheets/: extra.css
docs/wiki/: README.md  agent-channel-matrix.md  mcp-integration.md  repository-layout.md  unspsc-quick-ref.md
examples/: 01_structured_pipeline.py  02_skill_runtime.py  03_chain_style.py  04_procurement_intent_engine.py  05_credits_and_byom.py  06_plugin_registry.py  07_open_source_pipeline.py  08_startup_policy_realworld.py
examples/model_apis/: 01_openai_model_adapter.py  02_anthropic_model_adapter.py  03_gemini_model_adapter.py  04_ollama_model_adapter.py  05_model_router_adapter.py  README.md
integrations/openclaw-clawhub-skill/: manifest.openclaw.example.json
integrations/openclaw-clawhub-skill/neoxlink-sdk-0-6-0/: SKILL.md  _meta.json  mcp-config.json  skill.json
integrations/skillshub/: README.md  deploy_to_skillshub.py  ecosystem_deploy.py  publish.sh  skill-manifest.json
mcp/: config.neoxlink.example.json
neoxlink/: __init__.py
neoxlink_sdk/: __init__.py  async_client.py  async_pipeline.py  catalog.py  chains.py  client.py  credits.py  easy.py  engine.py  mcp.py  mcp_server.py  model_adapters.py  models.py  pipeline.py  pipeline_core.py  plugins.py  skill.py  tokenize.py  typed_outputs.py  unspsc.py
neoxlink_sdk/data/: unspsc_catalog.json
neoxlink_sdk/open_source/: __init__.py  connectors.py  contribution.py  evaluation.py  extraction_engine.py  intent_parsing.py  matching_engine.py  schemas.py  taxonomy_mapping.py
prompts/extraction/: extraction_engine.v1.md
prompts/intent/: intent_parser.v1.md
scripts/: push_readme_to_github.sh  skillshub_register.example.sh  validate_contribution.py
taxonomy/: README.md  unspsc_open_source.json
templates/: data_source_template.py  model_adapter_template.py  ranking_strategy_template.py
tests/: test_async_client.py  test_engine_heuristic.py  test_mcp_adapter.py  test_mcp_server_module.py  test_mcp_tool_latency.py  test_nl_to_structured.py  test_pipeline_core.py  test_taxonomy_open_source.py  test_typed_outputs.py  test_unspsc.py
(+2 files in other folders)
