[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neoxlink-sdk"
version = "0.4.0"
description = "SDK for structured procurement intent workflows with UNSPSC, matching, and credit-aware BYOM controls"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["httpx>=0.27.0", "pydantic>=2.8.2"]

[tool.setuptools]
packages = ["neoxlink_sdk"]
