[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neoxlink"
version = "0.6.3"
description = "Open-source SDK for LLM-first intent parsing, taxonomy mapping, extraction, and public-data matching pipelines"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
keywords = [
    "neoxlink",
    "UNSPSC",
    "MCP",
    "Model Context Protocol",
    "procurement",
    "B2B",
    "intent",
    "taxonomy",
    "agent",
    "skill",
    "commerce",
    "LLM",
]
dependencies = ["httpx>=0.27.0", "pydantic>=2.8.2", "openai"]
[project.urls]
Homepage = "https://pypi.org/project/neoxlink/"
Repository = "https://github.com/neowalter/NEOXLINK-SDK"
Documentation = "https://github.com/neowalter/NEOXLINK-SDK/blob/main/docs/wiki/README.md"
Issues = "https://github.com/neowalter/NEOXLINK-SDK/issues"
Changelog = "https://github.com/neowalter/NEOXLINK-SDK/releases"
[project.optional-dependencies]
model_examples = ["anthropic", "google-genai", "ollama", "duckduckgo-search"]
mcp = ["mcp>=1.0.0", "anyio>=4.0.0"]
dev = ["pytest>=8.0.0", "ruff>=0.4.0", "mcp>=1.0.0", "anyio>=4.0.0"]

[project.scripts]
neoxlink-mcp = "neoxlink_sdk.mcp_server:main"

[tool.setuptools.packages.find]
include = ["neoxlink_sdk*", "neoxlink"]

[tool.setuptools.package-data]
neoxlink_sdk = ["data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
